replaced akka actors by akka streams. based on stanikol's fork: https://github.com/stanikol/BatchGeocodingInScalaUsingGoogleAPI